syntax = "proto3";

option csharp_namespace = "Worker";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Receiver(RequestMessage) returns (ResponseMessage);
  rpc BroadCast(RequestMessage) returns (ResponseMessage);
}

message RequestMessage
{
	string name = 1;
	string body = 2;
}

message ResponseMessage
{
	string name = 1;
	string body = 2;
}
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
